# citerm

./: MANIFEST.in  README.md  pyproject.toml
citerm/: __main__.py  citerm.tcss
